--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -63,6 +63,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             /*height: 36px;*/
             padding: 0;
             margin-bottom: 8px;
+            font-size: 1em;
+            font-weight: 500;
         }
 
         .footer-spacer {
@@ -138,8 +140,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         }
 
         paper-item div.title {
-            /*font-size: 1em;*/
-            font-weight: 500;
+            font-size: 1em;
+            font-weight: 700;
             color: var(--app-text-color-light);
         }
 
