--- a/src/my-app.html
+++ b/src/my-app.html
@@ -63,7 +63,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/vaadin-radio-button/vaadin-radio-button.html">
 <link rel="import" href="../bower_components/vaadin-combo-box/vaadin-combo-box.html">
 <link rel="import" href="../bower_components/vaadin-date-picker/vaadin-date-picker.html">
-<link rel="import" href="../bower_components/global-variable/global-variable.html">
 <link rel="import" href="../bower_components/scary-cookie-consent/scary-cookie-consent.html">
 <link rel="import" href="my-icons.html">
 <link rel="import" href="looper-page/looper-toolbar.html">
@@ -77,8 +76,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="utils/pretty-number.html">
 <link rel="import" href="utils/long-hash.html">
 <link rel="import" href="utils/time-str.html">
+<link rel="import" href="utils/global-variable.html">
 <link rel="import" href="utils/notification-panel.html">
-<link rel="import" href="market/recent-fills.html">
 <link rel="lazy-import" href="page-markets.html">
 <link rel="lazy-import" href="page-market.html">
 <link rel="lazy-import" href="page-rings.html">
@@ -213,8 +212,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <app-toolbar>
                         <!-- <paper-icon-button icon="menu" drawer-toggle></paper-icon-button> -->
                         <div spacer></div>
-                        <iron-icon icon="menu"></iron-icon>
-                        <div main-title>Looper</div>
+                        <a styleless href="/#/"><iron-icon icon="menu"></iron-icon></a>
+                        <a styleless href="/#/"><div main-title>Looper</div></a>
                         <div>[[wallet.address]]</div>
                     </app-toolbar>
                 </app-header>
