--- a/src/my-app.html
+++ b/src/my-app.html
@@ -175,7 +175,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             top: 60px;
         }
 
-
+        #lockButton.openned {
+            background-color: var(--app-red-color);
+            color: white;
+            border-radius: 50%;
+        }
 
         paper-icon-button:not([narrow]) [drawer-toggle] {
             display: none;
@@ -212,9 +216,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                     <app-toolbar>
                         <!-- <paper-icon-button icon="menu" drawer-toggle></paper-icon-button> -->
                         <div spacer></div>
-                        <a styleless href="/#/"><iron-icon icon="menu"></iron-icon></a>
-                        <a styleless href="/#/"><div main-title>Looper</div></a>
+                        <a styleless href="/#/">
+                            <iron-icon icon="menu"></iron-icon>
+                        </a>
+                        <a styleless href="/#/">
+                            <div main-title>Looper</div>
+                        </a>
+                        <div condensed-title></div>
                         <div>[[wallet.address]]</div>
+                        <paper-icon-button id="lockButton" class$="[[lockClass]]" on-click="_lockButtonClick" icon="lock"></paper-icon-button>
+                        <div spacer></div>
                     </app-toolbar>
                 </app-header>
                 <div id="loading" class="vertical layout center center-justified">
@@ -300,6 +311,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                 '_routePageChanged(routeData.page)',
                 '_routeIdChanged(subrouteData.pageId)'
             ];
+        }
+
+        _lockButtonClick() {
+            this.$.lockButton.icon = "lock-open";
+            this.lockClass = "openned";
         }
 
         _routePageChanged(page) {
